--- a/www/home.html
+++ b/www/home.html
@@ -196,6 +196,14 @@
     <script>
       document.createElement('picture');
     </script>
+    <!-- Preloader-->
+    <div class="preloader">
+      <div class="preloader__inner">
+        <div class="preloader__logo">
+          <img class="preloader__logo-img" src="static/img/logo.svg" alt="image" title="" />
+        </div>
+      </div>
+    </div>
     <!-- Header-->
     <header class="header">
       <div class="header__container container">
@@ -809,8 +817,35 @@
           <a class="footer__bot-logo" href="#!">
             <img class="footer__bot-logo-img" src="static/img/logo.svg" alt="image" title="" />
           </a>
-          <div class="footer__bot-right"></div>
+          <div class="footer__bot-right">
+            <nav class="footer__bot-nav">
+              <ul>
+                <li>
+                  <a href="#!">Преимущества</a>
+                </li>
+                <li>
+                  <a href="#!">Как это работает</a>
+                </li>
+                <li>
+                  <a href="#!">Сферы деятельности</a>
+                </li>
+                <li>
+                  <a href="#!">Как создаем</a>
+                </li>
+                <li>
+                  <a href="#!">Кейсы</a>
+                </li>
+                <li>
+                  <a href="#!">Блог</a>
+                </li>
+                <li>
+                  <a href="#!">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
+        <p class="footer__copy">Copyright 2018 Unibot. All rights reserved.</p>
       </div>
     </footer>
     <!-- Scripts-->
