--- a/www/home.html
+++ b/www/home.html
@@ -214,25 +214,25 @@
           <nav class="header__nav">
             <ul>
               <li>
-                <a href="#!">Преимущества</a>
+                <a href="#advantage">Преимущества</a>
               </li>
               <li>
-                <a href="#!">Как это работает</a>
+                <a href="#how">Как это работает</a>
               </li>
               <li>
-                <a href="#!">Сферы деятельности</a>
+                <a href="#loc">Сферы деятельности</a>
               </li>
               <li>
-                <a href="#!">Как создаем</a>
+                <a href="#how">Как создаем</a>
               </li>
               <li>
-                <a href="#!">Кейсы</a>
+                <a href="#example">Кейсы</a>
               </li>
               <li>
-                <a href="#!">Блог</a>
+                <a href="home.html">Блог</a>
               </li>
               <li>
-                <a href="#!">Контакты</a>
+                <a href="home.html">Контакты</a>
               </li>
             </ul>
           </nav>
@@ -260,7 +260,7 @@
     </header>
     <!-- Main content-->
     <main class="content" data-page="home">
-      <section class="screen">
+      <section class="screen" id="screen">
         <div data-line></div>
         <div class="screen__content">
           <div class="screen__container container">
@@ -283,7 +283,7 @@
           </svg>
         </div>
       </section>
-      <section class="how">
+      <section class="how" id="how">
         <div data-line></div>
         <div class="how__gradient">
           <div class="how__gradient-el"></div>
@@ -433,7 +433,7 @@
         </div>
         </div>
       </section>
-      <section class="loc">
+      <section class="loc" id="loc">
         <div data-line></div>
         <div class="loc__container container">
           <div class="loc__title">Где это работает</div>
@@ -498,7 +498,7 @@
           </div>
         </div>
       </section>
-      <section class="advantage">
+      <section class="advantage" id="advantage">
         <div data-line></div>
         <div class="advantage__container container">
           <div class="advantage__title">Наши приемущества</div>
@@ -584,7 +584,7 @@
           </div>
         </div>
       </section>
-      <section class="example">
+      <section class="example" id="example">
         <div data-line></div>
         <div class="example__container container">
           <div class="example__title">Примеры работ</div>
@@ -670,7 +670,7 @@
           </div>
         </div>
       </section>
-      <section class="top">
+      <section class="top" id="top">
         <div data-line></div>
         <div class="top__container container">
           <div class="top__title">Интересные статьи о ботах</div>
