--- a/www/home.html
+++ b/www/home.html
@@ -284,7 +284,7 @@
               <div class="screen__title">НОВЫЙ ИНСТРУМЕНТ ПОСТРОЕНИЯ КОММУНИКАЦИЙ С ПОТРЕБИТЕЛЕМ</div>
               <div class="screen__text">Разрабатываем практичные решения, которые соответствуют целям наших клиентов, развивают городскую среду и увеличивают ценность проекта.</div>
               <div class="screen__btn-wrap">
-                <a class="btn btn_default" href="#!">Начать чат с ботом</a>
+                <a class="btn btn_default js-chat-init" href="#!">Начать чат с ботом</a>
               </div>
             </div>
           </div>
@@ -301,17 +301,19 @@
       </section>
       <section class="how" id="how" data-scroll-section="data-scroll-section">
         <div data-line></div>
+        <div class="chat how__chat" id="chat">
+          <div class="chat__container container"></div>
+        </div>
         <div class="how__gradient">
           <div class="how__gradient-el"></div>
           <div class="how__gradient-el"></div>
           <div class="how__gradient-el"></div>
         </div>
-        <!--+e.round-bottom.
-	<svg viewBox="0 0 1282 81">
-		<path d="M0,80.5h641.4C320.9,80.5,0,0.5,0,0.5V80.5z"/>
-		<path d="M1281,0.5c0,0-319.6,80-639.6,80H1282v-80H1281z"/>
-	</svg>
--->
+        <div class="how__round-bottom">
+          <svg viewBox="0 0 1282 81">
+            <path d="M0,80.5h641.4C320.9,80.5,0,0.5,0,0.5V80.5z" />
+            <path d="M1281,0.5c0,0-319.6,80-639.6,80H1282v-80H1281z" /> </svg>
+        </div>
         <svg class="is-hidden">
           <path id="path-how-1" d="M69.005,75.918 C139.703,30.693 249.171,-46.600 345.529,37.443 C441.887,121.484 490.431,200.368 418.726,261.891 C347.022,323.412 158.055,381.676 60.871,287.542 C-36.312,193.401 -1.694,121.143 69.005,75.918 Z"></path>
           <path id="path-how-2" d="M0.588,207.597 C-9.308,66.038 112.951,9.894 230.659,1.316 C348.367,-7.258 381.256,127.830 395.583,213.821 C409.910,299.812 326.068,315.336 209.426,364.212 C85.675,416.067 5.806,282.272 0.588,207.597 Z"></path>
