--- a/www/home.html
+++ b/www/home.html
@@ -735,7 +735,7 @@
               <div class="screen__title">НОВЫЙ ИНСТРУМЕНТ ПОСТРОЕНИЯ КОММУНИКАЦИЙ С ПОТРЕБИТЕЛЕМ</div>
               <div class="screen__text">Разрабатываем практичные решения, которые соответствуют целям наших клиентов, развивают городскую среду и увеличивают ценность проекта.</div>
               <div class="screen__btn-wrap">
-                <a class="btn btn_default js-chat-init" href="#!">Начать чат с ботом</a>
+                <div class="screen__btn js-chat-init">Начать чат с ботом</div>
               </div>
             </div>
           </div>
@@ -784,7 +784,17 @@
               <div class="chat__content-chat-human-inner"></div>
             </div>
             <div class="chat__content-controls-btn-wrap">
-              <a class="btn btn_default chat__content-controls-btn" href="#!"></a>
+              <a class="btn btn_default chat__content-controls-btn" href="#!">
+                <span class="btn__text"></span>
+                <div class="btn__bg">
+                  <svg class="btn__bg-1" viewbox="0 0 254 72" preserveAspectRatio="none">
+                    <path d="M36.000,0.000 L218.000,0.000 C237.882,0.000 254.000,16.118 254.000,36.000 L254.000,36.000 C254.000,55.882 237.882,72.000 218.000,72.000 L36.000,72.000 C16.118,72.000 0.000,55.882 0.000,36.000 L0.000,36.000 C0.000,16.118 16.118,0.000 36.000,0.000 Z"></path>
+                  </svg>
+                  <svg class="btn__bg-2" viewbox="0 0 254 82" preserveAspectRatio="none">
+                    <path d="M35.955,4.960 C51.683,1.770 81.250,-0.117 126.828,0.000 C172.385,0.117 203.634,1.246 218.000,5.000 C237.451,10.083 254.000,21.118 254.000,41.000 L254.000,41.000 C254.000,60.882 234.461,73.068 218.000,77.000 C204.753,80.164 172.621,82.000 127.181,82.000 C81.621,82.000 48.763,80.008 36.000,77.000 C22.578,73.837 0.000,60.882 0.000,41.000 L0.000,41.000 C0.000,21.118 19.644,8.269 35.955,4.960 Z"></path>
+                  </svg>
+                </div>
+              </a>
             </div>
             <form class="chat__content-controls-form" action="#">
               <div class="form-group">
@@ -801,8 +811,8 @@
             <div class="chat__data-bot">
               <div data-bot="0">
                 <p>Привет, Человек!</p>
-                <p>Меня зовут Unibot и я тот, кто больше расскажет тебе о крутых возможностях чатботов!</p>
-                <p>Ну, что ж, начнем с простого. Как дела?</p>
+                <!--p Меня зовут Unibot и я тот, кто больше расскажет тебе о крутых возможностях чатботов!-->
+                <!--p Ну, что ж, начнем с простого. Как дела?-->
               </div>
               <div data-bot="1">
                 <p>Текст бота №1</p>
@@ -992,7 +1002,17 @@
               <div class="loc__slider-counter-total"></div>
             </div>
             <div class="loc__slider-btn">
-              <a class="btn btn_default" href="#!">Заказать себе бот</a>
+              <a class="btn btn_default" href="#!">
+                <span class="btn__text">Заказать себе бот</span>
+                <div class="btn__bg">
+                  <svg class="btn__bg-1" viewbox="0 0 254 72" preserveAspectRatio="none">
+                    <path d="M36.000,0.000 L218.000,0.000 C237.882,0.000 254.000,16.118 254.000,36.000 L254.000,36.000 C254.000,55.882 237.882,72.000 218.000,72.000 L36.000,72.000 C16.118,72.000 0.000,55.882 0.000,36.000 L0.000,36.000 C0.000,16.118 16.118,0.000 36.000,0.000 Z"></path>
+                  </svg>
+                  <svg class="btn__bg-2" viewbox="0 0 254 82" preserveAspectRatio="none">
+                    <path d="M35.955,4.960 C51.683,1.770 81.250,-0.117 126.828,0.000 C172.385,0.117 203.634,1.246 218.000,5.000 C237.451,10.083 254.000,21.118 254.000,41.000 L254.000,41.000 C254.000,60.882 234.461,73.068 218.000,77.000 C204.753,80.164 172.621,82.000 127.181,82.000 C81.621,82.000 48.763,80.008 36.000,77.000 C22.578,73.837 0.000,60.882 0.000,41.000 L0.000,41.000 C0.000,21.118 19.644,8.269 35.955,4.960 Z"></path>
+                  </svg>
+                </div>
+              </a>
             </div>
             <div class="loc__slider">
               <div class="loc__slider-item">
@@ -1143,7 +1163,17 @@
               <div class="example__slider-counter-total"></div>
             </div>
             <div class="example__slider-btn">
-              <a class="btn btn_default" href="#!">Заказать себе бот</a>
+              <a class="btn btn_default" href="#!">
+                <span class="btn__text">Заказать себе бот</span>
+                <div class="btn__bg">
+                  <svg class="btn__bg-1" viewbox="0 0 254 72" preserveAspectRatio="none">
+                    <path d="M36.000,0.000 L218.000,0.000 C237.882,0.000 254.000,16.118 254.000,36.000 L254.000,36.000 C254.000,55.882 237.882,72.000 218.000,72.000 L36.000,72.000 C16.118,72.000 0.000,55.882 0.000,36.000 L0.000,36.000 C0.000,16.118 16.118,0.000 36.000,0.000 Z"></path>
+                  </svg>
+                  <svg class="btn__bg-2" viewbox="0 0 254 82" preserveAspectRatio="none">
+                    <path d="M35.955,4.960 C51.683,1.770 81.250,-0.117 126.828,0.000 C172.385,0.117 203.634,1.246 218.000,5.000 C237.451,10.083 254.000,21.118 254.000,41.000 L254.000,41.000 C254.000,60.882 234.461,73.068 218.000,77.000 C204.753,80.164 172.621,82.000 127.181,82.000 C81.621,82.000 48.763,80.008 36.000,77.000 C22.578,73.837 0.000,60.882 0.000,41.000 L0.000,41.000 C0.000,21.118 19.644,8.269 35.955,4.960 Z"></path>
+                  </svg>
+                </div>
+              </a>
             </div>
             <div class="example__slider-chat">
               <a class="example__slider-chat-text" href="#!">Поговорить с ботом</a>
@@ -1292,7 +1322,17 @@
             </div>
           </div>
           <div class="top__btn-wrap">
-            <a class="btn btn_white" href="#!">Все статьи</a>
+            <a class="btn btn_white" href="#!">
+              <span class="btn__text">Все статьи</span>
+              <div class="btn__bg">
+                <svg class="btn__bg-2" viewbox="0 0 254 82" preserveAspectRatio="none">
+                  <path d="M35.955,4.960 C51.683,1.770 81.250,-0.117 126.828,0.000 C172.385,0.117 203.634,1.246 218.000,5.000 C237.451,10.083 254.000,21.118 254.000,41.000 L254.000,41.000 C254.000,60.882 234.461,73.068 218.000,77.000 C204.753,80.164 172.621,82.000 127.181,82.000 C81.621,82.000 48.763,80.008 36.000,77.000 C22.578,73.837 0.000,60.882 0.000,41.000 L0.000,41.000 C0.000,21.118 19.644,8.269 35.955,4.960 Z"></path>
+                </svg>
+                <svg class="btn__bg-3" viewbox="0 0 254 82" preserveAspectRatio="none">
+                  <path d="M35.955,4.960 C51.683,1.770 81.250,-0.117 126.828,0.000 C172.385,0.117 203.634,1.246 218.000,5.000 C237.451,10.083 254.000,21.118 254.000,41.000 L254.000,41.000 C254.000,60.882 234.461,73.068 218.000,77.000 C204.753,80.164 172.621,82.000 127.181,82.000 C81.621,82.000 48.763,80.008 36.000,77.000 C22.578,73.837 0.000,60.882 0.000,41.000 L0.000,41.000 C0.000,21.118 19.644,8.269 35.955,4.960 Z"></path>
+                </svg>
+              </div>
+            </a>
           </div>
         </div>
       </section>
