--- a/www/home.html
+++ b/www/home.html
@@ -553,6 +553,19 @@
             <path class="st1" d="M255.5 169.8c-48 0-87 39-87 87s39 87 87 87 87-39 87-87-39-87-87-87zm0 140.2c-29.4 0-53.2-23.8-53.2-53.2s23.8-53.2 53.2-53.2 53.2 23.8 53.2 53.2c0 29.4-23.8 53.2-53.2 53.2z" />
           </g>
         </symbol>
+        <symbol id="icon-menu-close" viewBox="0 0 20 20">
+          <path fill-rule="evenodd" d="M18.485 4.343a2 2 0 1 1-2.828-2.828 2 2 0 0 1 2.828 2.828zm-9.899 7.071a2 2 0 1 1 2.828-2.828 2 2 0 0 1-2.828 2.828zm-7.071 7.071a2 2 0 1 1 2.828-2.828 2 2 0 0 1-2.828 2.828z" />
+          <path fill-rule="evenodd" d="M18.485 18.485a2 2 0 1 1-2.828-2.828 2 2 0 0 1 2.828 2.828zm-9.899-7.071a2 2 0 1 1 2.828-2.828 2 2 0 0 1-2.828 2.828zM1.515 4.343a2 2 0 1 1 2.828-2.828 2 2 0 0 1-2.828 2.828z" />
+        </symbol>
+        <symbol id="icon-menu-open" viewBox="0 0 34 14">
+          <path fill-rule="evenodd" d="M12 0a2 2 0 1 1 0 4 2 2 0 0 1 0-4z" />
+          <path fill-rule="evenodd" d="M2 0a2 2 0 1 1 0 4 2 2 0 0 1 0-4z" />
+          <path fill-rule="evenodd" d="M22 0a2 2 0 1 1 0 4 2 2 0 0 1 0-4z" />
+          <path fill-rule="evenodd" d="M34 2a2 2 0 1 1-3.999.001A2 2 0 0 1 34 2z" />
+          <path fill-rule="evenodd" d="M22 10a2 2 0 1 1 .001 3.999A2 2 0 0 1 22 10z" />
+          <path fill-rule="evenodd" d="M12 10a2 2 0 1 1 .001 3.999A2 2 0 0 1 12 10z" />
+          <path fill-rule="evenodd" d="M34 12a2 2 0 1 1-3.999.001A2 2 0 0 1 34 12z" />
+        </symbol>
         <symbol id="icon-skype" viewBox="0 0 512 512">
           <style>
             .st0 {
@@ -706,6 +719,14 @@
               </li>
             </ul>
           </div>
+          <div class="header__menu-btn">
+            <svg class="icon icon-menu-open">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-menu-open"></use>
+            </svg>
+            <svg class="icon icon-menu-close">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-menu-close"></use>
+            </svg>
+          </div>
         </div>
       </div>
     </header>
@@ -735,7 +756,17 @@
               <div class="screen__title">НОВЫЙ ИНСТРУМЕНТ ПОСТРОЕНИЯ КОММУНИКАЦИЙ С ПОТРЕБИТЕЛЕМ</div>
               <div class="screen__text">Разрабатываем практичные решения, которые соответствуют целям наших клиентов, развивают городскую среду и увеличивают ценность проекта.</div>
               <div class="screen__btn-wrap">
-                <div class="screen__btn js-chat-init">Начать чат с ботом</div>
+                <a class="btn btn_default screen__btn js-chat-init" href="#!">
+                  <span class="btn__text">Начать чат с ботом</span>
+                  <div class="btn__bg">
+                    <svg class="btn__bg-1" viewbox="0 0 254 72" preserveAspectRatio="none">
+                      <path d="M36.000,0.000 L218.000,0.000 C237.882,0.000 254.000,16.118 254.000,36.000 L254.000,36.000 C254.000,55.882 237.882,72.000 218.000,72.000 L36.000,72.000 C16.118,72.000 0.000,55.882 0.000,36.000 L0.000,36.000 C0.000,16.118 16.118,0.000 36.000,0.000 Z"></path>
+                    </svg>
+                    <svg class="btn__bg-2" viewbox="0 0 254 82" preserveAspectRatio="none">
+                      <path d="M35.955,4.960 C51.683,1.770 81.250,-0.117 126.828,0.000 C172.385,0.117 203.634,1.246 218.000,5.000 C237.451,10.083 254.000,21.118 254.000,41.000 L254.000,41.000 C254.000,60.882 234.461,73.068 218.000,77.000 C204.753,80.164 172.621,82.000 127.181,82.000 C81.621,82.000 48.763,80.008 36.000,77.000 C22.578,73.837 0.000,60.882 0.000,41.000 L0.000,41.000 C0.000,21.118 19.644,8.269 35.955,4.960 Z"></path>
+                    </svg>
+                  </div>
+                </a>
               </div>
             </div>
           </div>
